--- a/categoria.html
+++ b/categoria.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tienda Online Huevos</title>
+    <title>Categoría</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Narrow:ital,wght@0,400..700;1,400..700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="./nova.css">
     <link rel="stylesheet" href="./styles.css">
 </head>
+
 <body>
     <!-- Barra navegación -->
     <nav class="nav bg-dark">
         <div class="nav-menu-responsive">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z"/></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
+                <path d="M120-240v-80h720v80H120Zm0-200v-80h720v80H120Zm0-200v-80h720v80H120Z" />
+            </svg>
         </div>
         <div class="nav-menu">
             <a href="/"><b>Nombre de tienda</b></a>
@@ -23,8 +28,11 @@
             <a href="/categoria.html">Marrones</a>
             <a href="/categoria.html">Especiales</a>
         </div>
-        <div class="shopping-cart"  id="open-cart">
-            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff"><path d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z"/></svg>
+        <div class="shopping-cart" id="open-cart">
+            <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
+                <path
+                    d="M280-80q-33 0-56.5-23.5T200-160q0-33 23.5-56.5T280-240q33 0 56.5 23.5T360-160q0 33-23.5 56.5T280-80Zm400 0q-33 0-56.5-23.5T600-160q0-33 23.5-56.5T680-240q33 0 56.5 23.5T760-160q0 33-23.5 56.5T680-80ZM246-720l96 200h280l110-200H246Zm-38-80h590q23 0 35 20.5t1 41.5L692-482q-11 20-29.5 31T622-440H324l-44 80h480v80H280q-45 0-68-39.5t-2-78.5l54-98-144-304H40v-80h130l38 80Zm134 280h280-280Z" />
+            </svg>
             <p>Carrito</p>
             <div class="shopping-cart-num" id="shoppingCart">
                 3
@@ -32,25 +40,14 @@
         </div>
     </nav>
 
-
     <!-- Oferta -->
     <section class="sale">
-        Septiembre llegó con regalo 🎉 objten un 10% por la compra de 10 bandejas 🚛 despacjos a todo Chile 🍳 TIEMPO ESTIMADO DE DESPACHO 6 - 7 DÍAS HÁBILES
+        Septiembre llegó con regalo 🎉 objten un 10% por la compra de 10 bandejas 🚛 despacjos a todo Chile 🍳 TIEMPO
+        ESTIMADO DE DESPACHO 6 - 7 DÍAS HÁBILES
     </section>
-    <header class="fade-in">
-        <h1 class="text-white">Los huevos mas frescos de Chile a la puerta de tu casa</h1>
-        <button class="btn btn-lg btn-success" onclick="goToCategory()">Ver catálogo</button>
-    </header>
-    <main>
-        <section class="info-shop fade-up">
-            <p>Más de 10.000 clientes</p>
-            <p>100K de seguidores</p>
-            <p>Producto Chileno</p>
-        </section>
-
-        <!-- Productos -->
+   <!-- Productos -->
         <section>
-            <h2 class="mt-5">Comienza tu día con la mejor proteína</h2>
+            <h2 class="mt-5">Categoría</h2>
             <div class="container-cards grid-3">
                 <div class="card">
                     <div class="img" onclick="goToDetail()"></div>
@@ -90,33 +87,6 @@
                 </div>
             </div>
         </section>
-        <section class="grid-2 bg-gray fade-up">
-            <div class="col-left">
-                <h2>Los mejores huevos</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, placeat dolores corrupti iure qui voluptas perferendis error nam delectus distinctio, fugiat accusamus eligendi obcaecati necessitatibus ad voluptatem quod dicta, culpa eaque minima. Aperiam doloremque pariatur voluptates aspernatur unde maiores. Ab repellendus veniam, delectus ex mollitia praesentium rerum vero! Ipsam aliquam, quis voluptatum vitae officia est quo inventore ut nisi, optio minus reiciendis eaque error velit excepturi? Nesciunt, sint a! Explicabo aspernatur perspiciatis odit! Necessitatibus odio, minus quas dolores sit ipsum provident inventore magnam at, cumque harum? In at eos amet iusto esse ea eum nam inventore consequatur aliquam culpa, praesentium cumque minus obcaecati! Nemo id illo inventore distinctio repellendus fuga hic rem eum, exercitationem, mollitia quia laudantium. Quibusdam assumenda nemo libero excepturi repellendus provident rerum. Adipisci amet commodi nobis sequi deserunt sapiente magni, quasi accusamus ipsa.</p>
-            </div>
-            <div class="col-right"></div>
-        </section>  
-
-        <!-- Faq -->
-        <section class="faq fade-up">
-            <h2 class="mt-5">¿Preguntas? Tenemos la respuesta a tus dudas</h2>
-            <div class="card mt-2">
-                <div class="item">
-                    <h3>¿Cuanto se demora en llevar el envío a mi lugar?</h3>
-                    <p>El envío es relativo dependiendo de donde vivas, pero por lo general el tiempo puede variar desde 1 a 5 días hábiles</p>
-                </div>
-                <div class="item">
-                    <h3>¿Qué medios de pago aceptan?</h3>
-                    <p>Aceptamos pagos por transferencia bancaria, tarjeta de crédito o débito</p>
-                </div>
-                <div class="item">
-                    <h3>¿Cómo los puedo contactar?</h3>
-                    <p>Puedes enviarno un mail a contacto@huevos.cl, o escribenos por redes sociales (Instagram, Tiktok).</p>
-                </div>
-            </div>
-        </section>
-    </main>
 
     <!-- Links -->
     <section class="links grid-4 mt-5 g-3 fade-in">
@@ -144,20 +114,20 @@
             <h3>Redes sociales</h3>
             <hr>
             <!-- iconos -->
-             <div class="input-group">
+            <div class="input-group">
                 <label for="">Te contactamos</label>
                 <div class="input-button">
-                    <input type="text" >
+                    <input type="text">
                     <button class="btn-success">Enviar</button>
                 </div>
-             </div>
+            </div>
         </div>
     </section>
     <footer class="footer bg-dark">
         Todos los derechos reservados
     </footer>
 
-    <!-- Carrito de compras -->
+     <!-- Carrito de compras -->
     <div class="overlay" id="overlay"></div>
     <section class="shopping-cart-view" id="cart">
         <div>
@@ -193,4 +163,5 @@
     <script src="./nova.js"></script>
     <script src="./main.js"></script>
 </body>
+
 </html>
