--- a/carrito.html
+++ b/carrito.html
@@ -22,11 +22,11 @@
             </svg>
         </div>
         <div class="nav-menu">
-            <a href="/"><b>Nombre de tienda</b></a>
-            <a href="/categoria.html">Orgánicos</a>
-            <a href="/categoria.html">Blancos</a>
-            <a href="/categoria.html">Marrones</a>
-            <a href="/categoria.html">Especiales</a>
+            <a href="/ecommerce-template-01/"><b>Nombre de tienda</b></a>
+            <a href="/ecommerce-template-01/categoria.html">Orgánicos</a>
+            <a href="/ecommerce-template-01/categoria.html">Blancos</a>
+            <a href="/ecommerce-template-01/categoria.html">Marrones</a>
+            <a href="/ecommerce-template-01/categoria.html">Especiales</a>
         </div>
         <div class="shopping-cart hidde" id="open-cart">
             <svg xmlns="http://www.w3.org/2000/svg" height="24px" viewBox="0 -960 960 960" width="24px" fill="#ffffff">
