--- a/detalle.html
+++ b/detalle.html
@@ -47,9 +47,9 @@
     </section>
 
     <!-- Detalle -->
-    <section class="container-detail">
-        <div class="img-product"></div>
-        <div class="container-detail-product">
+    <section class="container row">
+        <div class="img-product col-5"></div>
+        <div class="container-detail-product col-7 p-2">
             <h2>Huevos de codorniz</h2>
             <p class="price">$ 5.000</p>
             <p class="detail">Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae, placeat dolores corrupti iure qui voluptas perferendis error nam delectus distinctio, fugiat accusamus</p>
