--- a/categoria.html
+++ b/categoria.html
@@ -53,7 +53,7 @@
                     <div class="img" onclick="goToDetail()"></div>
                     <div class="container-text">
                         <h4>Huevos de Codorniz</h4>
-                        <p>Huevo de codorniz feliz bla bla</p>
+                        <p class="description">Huevo de codorniz feliz bla bla</p>
                         <p class="price">$5.000</p>
                         <div class="container-add-cart g-2">
                             <input type="number" class="input-form" id="product1" min="0" value="0">
@@ -65,7 +65,7 @@
                     <div class="img" onclick="goToDetail()"></div>
                     <div class="container-text">
                         <h4>Huevos de Codorniz</h4>
-                        <p>Huevo de codorniz feliz bla bla</p>
+                        <p class="description">Huevo de codorniz feliz bla bla</p>
                         <p class="price">$5.000</p>
                         <div class="container-add-cart g-2">
                             <input type="number" class="input-form" id="product2" min="0" value="0">
